UV Snapping behaviour inconsistency #93538

Closed
opened 2021-12-01 11:38:06 +01:00 by Adrian · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.89

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8

Short description of error
The vertex snapping in the UV Editor works different than in the 3D Viewport. In the 3D Viewport you can move the vertex and if you get close to another vertex it snaps to it. In the UV Editor you cannot move the vertex and if you get close to another vertex it snaps to it. It should be either or not both, I prefer the way it works in the 3D Viewport(see attached screen capture).
snappingInconsistency.mp4

Exact steps for others to reproduce the error

  1. Go to the UV Editing workspace
  2. Create a cube or use the default one
  3. Enable vertex snapping in the 3D Viewport and select any vertex of the cube
  4. Try to move but keep a distance to other vertices, you are able to move the vertex without snapping
  5. Move the vertex close to another vertex and it will snap
  6. Select all faces of the cube
  7. Go the UV Editor and enable vertex snapping
  8. Select a vertex and try to move while keeping distance to another vertices, it will not move
  9. Move the vertex close to another vertex and it will snap
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.89 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` **Short description of error** The vertex snapping in the UV Editor works different than in the 3D Viewport. In the 3D Viewport you can move the vertex and if you get close to another vertex it snaps to it. In the UV Editor you cannot move the vertex and if you get close to another vertex it snaps to it. It should be either or not both, I prefer the way it works in the 3D Viewport(see attached screen capture). [snappingInconsistency.mp4](https://archive.blender.org/developer/F12672494/snappingInconsistency.mp4) **Exact steps for others to reproduce the error** 1. Go to the UV Editing workspace 2. Create a cube or use the default one 3. Enable vertex snapping in the 3D Viewport and select any vertex of the cube 4. Try to move but keep a distance to other vertices, you are able to move the vertex without snapping 5. Move the vertex close to another vertex and it will snap 6. Select all faces of the cube 7. Go the UV Editor and enable vertex snapping 8. Select a vertex and try to move while keeping distance to another vertices, it will not move 9. Move the vertex close to another vertex and it will snap
Author

Added subscriber: @LalaGhost

Added subscriber: @LalaGhost
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @Patnard

Added subscriber: @Patnard

Works the same way in 3.0, I agree that it should work like in the 3d viewport, unless there is a logic I don't know behind it. Using CTRL to snap works the same way, when pressing the key, the moving vertex freeze in place until the mouse hover over another vertex, then it snaps.

Works the same way in 3.0, I agree that it should work like in the 3d viewport, unless there is a logic I don't know behind it. Using CTRL to snap works the same way, when pressing the key, the moving vertex freeze in place until the mouse hover over another vertex, then it snaps.
Member

Added subscribers: @mano-wii, @lichtwerk

Added subscribers: @mano-wii, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Can confirm the behavior, but (without having looked at code) this might be more of a feature request.
Will let #modeling module decide here.

CC @mano-wii

Can confirm the behavior, but (without having looked at code) this might be more of a feature request. Will let #modeling module decide here. CC @mano-wii
Philipp Oeser changed title from Snapping behaviour inconsistency to UV Snapping behaviour inconsistency 2022-01-19 08:39:02 +01:00

It always worked like this. So it's not really a bug.
But it seems to be a valid feature. And it doesn't seem to be complicated to implement.
Investigating...

It always worked like this. So it's not really a bug. But it seems to be a valid feature. And it doesn't seem to be complicated to implement. Investigating...
Author

Removed subscriber: @LalaGhost

Removed subscriber: @LalaGhost

This issue was referenced by d2271cf939

This issue was referenced by d2271cf939261b2515f3bb075eed03303584ce74

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-05-06 14:00:01 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93538
No description provided.